# tuinix

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
examples/: basic.rs  hello.rs  mouse.rs  non_blocking.rs  nonblocking.rs
src/: frame.rs  geometry.rs  input.rs  lib.rs  style.rs  terminal.rs  text.rs
