[package]
name = "tuinix"
version = "0.1.5"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A library for building terminal user interface (TUI) applications on Unix systems with minimum dependencies"
license = "MIT"
homepage = "https://github.com/sile/tuinix"
repository = "https://github.com/sile/tuinix"
readme = "README.md"
keywords = ["terminal", "tui", "unix"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
libc = "0.2.172"

[dev-dependencies]
mio = { version = "1.0.3", features = ["os-ext", "os-poll"] }
unicode-width = "0.2.0"
